since version 2.1.3
===================
* move conftest.py to test dir (so tests can be run from there)
* add check-manifest test to github actions workflow.
* update some cartopy test scripts to remove deprecation warnings.

version 2.1.3 (git tag v2.1.3rel)
================================
* fix pygrib.get_definitions_path() so it works if set_definitions_path has not been called.
* add conftest.py to MANIFEST.in (issue #171)

version 2.1.2 (git tag v2.1.2rel)
================================
* use pytest-mpl for image comparison tests.
* change license to MIT.
* changes gribmessage.projparams['proj'] from 'cyl' to 'longlat'
  for non-projection projections (e.g. 'regular_ll'). Issue #167.
* reorganize to include eccodes definitions inside package 
  when wheels are build (PYGRIB_WHEEL env var is set).
  Add set_definitions_path/get_defintions_path module functions
  to get/reset ECCODES_DEFINITION_PATH.
* include binary wheels for linux in pypi release.
* add grid template definition for RAP grib files in binary wheels (issue #134).
  Not fully implemented, but at least file can be read (gridType=unknown, latlons 
  method doesn't yet work)..

version 2.1.1 (git tag v2.1.1rel)
=================================
* clean up docs.
* migrate examples in 'test' directory from basemap to cartopy.
* enable github actions for CI (PR #159).

version 2.1 (git tag v2.1rel)
============================
* split ncepgrib2 module into a separate project
 (https://github.com/jswhit/ncepgrib2). pygrib now only uses
  eccodes. Docs converted to sphinx.

version 2.0.6 (git tag v2.0.6rel)
=================================
* restore python 2 compatability.
* distinguish between run and build time dependenices in setup.py (PR #112).
* Fix problem printing grib messages with NLDAS grib files (PR #141).

version 2.0.5 (git tag v2.0.5rel)
==================================
* fix error in latlons method for lambert projection and polar stereo when 
  jScansPositively == 0 (PR #129).