@@ -3,6 +3,8 @@ since version 2.1.3
 * move conftest.py to test dir (so tests can be run from there)
 * add check-manifest test to github actions workflow.
 * update some cartopy test scripts to remove deprecation warnings.
+* print more informative error message if trying to import pygrib
+  from install directory.
 
 version 2.1.3 (git tag v2.1.3rel)
 ================================
